fixed spacing of sections

--- a/styles.css
+++ b/styles.css
@@ -262,7 +262,7 @@
       width: 100%;
       height: 100%;
       margin-top: 80px;
-      padding-bottom: 100px;
+      padding-bottom: 110px;
       /* background: whitesmoke; */
 
   }
